--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <a href="#" class="list-group-item list-group-item-action bg-light">DM Tools</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">DM Advice</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">PC Advice</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Adventure Rating</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">System Ratings</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Recommendations</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Other</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -40,7 +42,7 @@
     <div id="page-content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+        <button class="btn btn-primary" id="menu-toggle">Menu</button>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -54,7 +56,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li>
-            <li class="nav-item dropdown">
+            <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </a>
@@ -64,7 +66,7 @@
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
-            </li>
+            </li>-->
           </ul>
         </div>
       </nav>
