--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <a href="#" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">System Ratings</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Recommendations</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Resources</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Other</a>
       </div>
     </div>
@@ -47,7 +48,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-
+<!--
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
@@ -56,7 +57,7 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li>
-            <!--<li class="nav-item dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </a>
@@ -65,11 +66,11 @@
                 <a class="dropdown-item" href="#">Another action</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>-->
+            </div>
           </ul>
         </div>
-      </nav>
+    </li>-->
+</nav>
 
       <div class="container-fluid">
         <h1 class="mt-4">Simple Sidebar</h1>
