--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                 <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </ul>
-        </div>
-    </li>-->
+        </div>-->
+    </li>
 </nav>
 
       <div class="container-fluid">
