--- a/template.html
+++ b/template.html
@@ -26,12 +26,15 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">Start Bootstrap </div>
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Home</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">DM Tools</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">DM Advice</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">PC Advice</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">System Ratings</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Recommendations</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Resources</a>
+        <a href="#" class="list-group-item list-group-item-action bg-light">Other</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
