--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">DM Livewires RPG Guides</div>
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">DM Tools</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">DM Advice</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">PC Advice</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">System Ratings</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Recommendations</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Resources</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Other</a>
+        <a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a>
+        <a href="/dmadvice" class="list-group-item list-group-item-action bg-light">DM Advice</a>
+        <a href="/pcadvice" class="list-group-item list-group-item-action bg-light">PC Advice</a>
+        <a href="/adventureratings" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a>
+        <a href="/systemratings" class="list-group-item list-group-item-action bg-light">System Ratings</a>
+        <a href="/recommendations" class="list-group-item list-group-item-action bg-light">Recommendations</a>
+        <a href="/resources" class="list-group-item list-group-item-action bg-light">Resources</a>
+        <a href="/other" class="list-group-item list-group-item-action bg-light">Other</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -42,7 +42,7 @@
     <div id="page-content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
+        <button class="btn btn-primary" id="menu-toggle">Menu</button>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -51,14 +51,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 More
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">About</a>
+                <a class="dropdown-item" href="/about">About</a>
+              </div>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/dmscreen">DM Screen</a>
               </div>
             </li>
           </ul>
