--- a/index.html
+++ b/index.html
@@ -26,14 +26,42 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <div class="sidebar-heading">DM Livewires RPG Guides</div>
       <div class="list-group list-group-flush">
-        <a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a>
-        <a href="/dmadvice" class="list-group-item list-group-item-action bg-light">DM Advice</a>
-        <a href="/pcadvice" class="list-group-item list-group-item-action bg-light">PC Advice</a>
-        <a href="/adventureratings" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a>
-        <a href="/systemratings" class="list-group-item list-group-item-action bg-light">System Ratings</a>
-        <a href="/recommendations" class="list-group-item list-group-item-action bg-light">Recommendations</a>
-        <a href="/resources" class="list-group-item list-group-item-action bg-light">Resources</a>
-        <a href="/other" class="list-group-item list-group-item-action bg-light">Other</a>
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+          <li class="nav-item">
+            <a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                DM Advice
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/#">Item 1</a>
+              </div>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                PC Advice
+              </a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/#">Item 1</a>
+              </div>
+          </li>
+          <li class="nav-item">
+            <a href="/adventureratings" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a>
+          </li>
+          <li class="nav-item">
+            <a href="/systems" class="list-group-item list-group-item-action bg-light">Systems</a>
+          </li>
+          <li class="nav-item">
+             <a href="/recommendations" class="list-group-item list-group-item-action bg-light">Recommendations</a>
+          </li>
+          <li class="nav-item">
+          <a href="/resources" class="list-group-item list-group-item-action bg-light">Resources</a>
+          </li>
+          <li class="nav-item">
+          <a href="/other" class="list-group-item list-group-item-action bg-light">Other</a>
+          </li>
+       </ul>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
