--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ function closeNav() {
   document.getElementById("main").style.marginLeft= "0";
 }
 </script>
-      <--<div class="list-group list-group-flush">
+      <!--<div class="list-group list-group-flush">
         
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
           <li class="nav-item">
