--- a/index.html
+++ b/index.html
@@ -76,19 +76,23 @@ body {
      
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="/dmadvice" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">DM Advice<span class="caret">&nbsp;</span>
-      </a>
+    <ul>
+      <li>
+        <a href="/dmadvice" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">DM Advice<span class="caret">&nbsp;</span>
+        </a>
+      </li>
     <ul class="dropdown-menu">
       <li class="">
         <a href="/">-</a>
       </li>
     </ul>
-      <a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a>
-      <a href="/adventureratings" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a>
-      <a href="/systems" class="list-group-item list-group-item-action bg-light">Systems</a>
-      <a href="/recommendations" class="list-group-item list-group-item-action bg-light">Recommendations</a>
-      <a href="/resources" class="list-group-item list-group-item-action bg-light">Resources</a>
-      <a href="/other" class="list-group-item list-group-item-action bg-light">Other</a>
+     <li><a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a></li>
+      <li><a href="/adventureratings" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a></li>
+      <li><a href="/systems" class="list-group-item list-group-item-action bg-light">Systems</a></li>
+      <li><a href="/recommendations" class="list-group-item list-group-item-action bg-light">Recommendations</a></li>
+      <li><a href="/resources" class="list-group-item list-group-item-action bg-light">Resources</a></li>
+      <li><a href="/other" class="list-group-item list-group-item-action bg-light">Other</a></li>
+    </ul>
   </div>
       <!--<div class="list-group list-group-flush">
         
