--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ body {
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <ul>
+      <li><a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a></li>
       <li><a data-toggle="collapse" href="#collapse1">DM Advice</a>
         <div id="collapse1" class="panel-collapse collapse">
         <ul class="list-group">
@@ -86,7 +87,15 @@ body {
         </ul>
       </div>
       </li>
-      <li><a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a></li>
+      <li><a data-toggle="collapse" href="#collapse2">PC Advice</a>
+        <div id="collapse2" class="panel-collapse collapse">
+        <ul class="list-group">
+          <li class="list-group-item">One</li>
+          <li class="list-group-item">Two</li>
+          <li class="list-group-item">Three</li>
+        </ul>
+      </div>
+      </li>
       <li><a href="/adventureratings" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a></li>
       <li><a href="/systems" class="list-group-item list-group-item-action bg-light">Systems</a></li>
       <li><a href="/recommendations" class="list-group-item list-group-item-action bg-light">Recommendations</a></li>
@@ -94,32 +103,6 @@ body {
       <li><a href="/other" class="list-group-item list-group-item-action bg-light">Other</a></li>
     </ul>
   </div>
-      <!--<div class="list-group list-group-flush">
-        
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a>
-          </li>
-          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                DM Advice
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/#">Item 1</a>
-              </div>
-          </li>
-          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                PC Advice
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/#">Item 1</a>
-              </div>
-          </li>
-          
-       </ul>
-      </div>-->
-
     <!-- /#sidebar-wrapper -->
 
     <!-- Page Content -->
