--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <ul>
-      <li><a href="/dmtools" class="list-group-item list-group-item-action bg-light">DM Tools</a></li>
+      <li><a href="/dmtools" class="list-group-item">DM Tools</a></li>
       <li><a data-toggle="collapse" href="#collapse1">DM Advice</a>
         <div id="collapse1" class="panel-collapse collapse">
         <ul class="list-group">
@@ -46,11 +46,11 @@
         </ul>
       </div>
       </li>
-      <li><a href="/adventureratings" class="list-group-item list-group-item-action bg-light">Adventure Ratings</a></li>
-      <li><a href="/systems" class="list-group-item list-group-item-action bg-light">Systems</a></li>
-      <li><a href="/recommendations" class="list-group-item list-group-item-action bg-light">Recommendations</a></li>
-      <li><a href="/resources" class="list-group-item list-group-item-action bg-light">Resources</a></li>
-      <li><a href="/other" class="list-group-item list-group-item-action bg-light">Other</a></li>
+      <li><a href="/adventureratings" class="list-group-item">Adventure Ratings</a></li>
+      <li><a href="/systems" class="list-group-item">Systems</a></li>
+      <li><a href="/recommendations" class="list-group-item">Recommendations</a></li>
+      <li><a href="/resources" class="list-group-item">Resources</a></li>
+      <li><a href="/other" class="list-group-item">Other</a></li>
     </ul>
   </div>
     <!-- /#sidebar-wrapper -->
