--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <ul>
+    <ul class="list-unstyled">
       <li><a href="/dmtools" class="list-group-item">DM Tools</a></li>
       <li><a data-toggle="collapse" href="#collapse1">DM Advice</a>
         <div id="collapse1" class="panel-collapse collapse">
