--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <ul class="list-unstyled">
       <li><a href="/dmtools" class="list-group-item">DM Tools</a></li>
-      <li><a data-toggle="collapse" href="#collapse1">DM Advice</a>
+      <li><a data-toggle="collapse" href="#collapse1">DM Advice<span class="caret">&nbsp;</span></a>
         <div id="collapse1" class="panel-collapse collapse">
         <ul class="list-group">
           <li class="list-group-item">One</li>
@@ -37,7 +37,7 @@
         </ul>
       </div>
       </li>
-      <li><a data-toggle="collapse" href="#collapse2">PC Advice</a>
+      <li><a data-toggle="collapse" href="#collapse2">PC Advice<span class="caret">&nbsp;</span></a>
         <div id="collapse2" class="panel-collapse collapse">
         <ul class="list-group">
           <li class="list-group-item">One</li>
