--- a/index.html
+++ b/index.html
@@ -27,30 +27,30 @@
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <ul class="list-unstyled">
-      <li><a href="/dmtools" class="list-group-item">DM Tools</a></li>
+      <li><a href="/dnd/dmtools" class="list-group-item">DM Tools</a></li>
       <li><a data-toggle="collapse" href="#collapse1">DM Advice<span class="caret">&nbsp;</span></a>
         <div id="collapse1" class="panel-collapse collapse">
         <ul class="list-group">
-          <li class="list-group-item">One</li>
-          <li class="list-group-item">Two</li>
-          <li class="list-group-item">Three</li>
+          <li class="list-group-item"><a href="/dnd/">One</a></li>
+          <li class="list-group-item"><a href="/dnd/">Two</a></li>
+          <li class="list-group-item"><a href="/dnd/">Three</a></li>
         </ul>
       </div>
       </li>
       <li><a data-toggle="collapse" href="#collapse2">PC Advice<span class="caret">&nbsp;</span></a>
         <div id="collapse2" class="panel-collapse collapse">
         <ul class="list-group">
-          <li class="list-group-item">One</li>
-          <li class="list-group-item">Two</li>
-          <li class="list-group-item">Three</li>
+          <li class="list-group-item"><a href="/dnd/">One</a></li>
+          <li class="list-group-item"><a href="/dnd/">Two</a></li>
+          <li class="list-group-item"><a href="/dnd/">Three</a></li>
         </ul>
       </div>
       </li>
-      <li><a href="/adventureratings" class="list-group-item">Adventure Ratings</a></li>
-      <li><a href="/systems" class="list-group-item">Systems</a></li>
-      <li><a href="/recommendations" class="list-group-item">Recommendations</a></li>
-      <li><a href="/resources" class="list-group-item">Resources</a></li>
-      <li><a href="/other" class="list-group-item">Other</a></li>
+      <li><a href="/dnd/adventureratings" class="list-group-item">Adventure Ratings</a></li>
+      <li><a href="/dnd/systems" class="list-group-item">Systems</a></li>
+      <li><a href="/dnd/recommendations" class="list-group-item">Recommendations</a></li>
+      <li><a href="/dnd/resources" class="list-group-item">Resources</a></li>
+      <li><a href="/dnd/other" class="list-group-item">Other</a></li>
     </ul>
   </div>
     <!-- /#sidebar-wrapper -->
@@ -62,7 +62,7 @@
         <div id="main">
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
-        <div class="sidebar-heading"><a href="/">DM Livewires RPG Emporium</a></div>
+        <div class="sidebar-heading"><a href="/dnd" class="menu-title">DM Livewires RPG Emporium</a></div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
