--- a/index.html
+++ b/index.html
@@ -63,13 +63,10 @@
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
         <div class="sidebar-heading"><a href="/dnd" class="menu-title">DM Livewires RPG Emporium</a></div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
       </nav>
 
       <div class="container-fluid">
-        
+        <p>content</p>
       </div>
     </div>
     <!-- /#page-content-wrapper -->
