--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
       </nav>
 
       <div class="container-fluid">
-        <p>content</p>
+        <div id="main">
+          <p>content</p>
+        </div>
       </div>
     </div>
     <!-- /#page-content-wrapper -->
