--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div id="page-content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <div id="main">
+        <div id="main-content">
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
         <div class="sidebar-heading"><a href="/dnd" class="menu-title">DM Livewires RPG Emporium</a></div>
@@ -94,11 +94,13 @@
 function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
   document.getElementById("main").style.marginLeft = "250px";
+  document.getElementById("main-content").style.marginLeft = "250px";
 }
 
 function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
   document.getElementById("main").style.marginLeft= "0";
+  document.getElementById("main-content").style.marginLeft= "0";
 }
 </script>
   </footer>
