--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     <div id="page-content-wrapper">
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <div id="main-content">
-          <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+        <div id="main">
+          <span style="font-size:30px;cursor:pointer" onclick="openNav();closeNav()">&#9776;</span>
         </div>
         <div class="sidebar-heading"><a href="/dnd" class="menu-title">DM Livewires RPG Emporium</a></div>
       </nav>
 
       <div class="container-fluid">
-        <div id="main">
+        <div id="main-content">
           <p>content</p>
         </div>
       </div>
