--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
         <div id="main">
-          <span style="font-size:30px;cursor:pointer" onclick="openNav();closeNav()">&#9776;</span>
+          <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
         <div class="sidebar-heading"><a href="/dnd" class="menu-title">DM Livewires RPG Emporium</a></div>
       </nav>
