--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
 
       <div class="container-fluid">
         <div id="main-content">
-          <p>content</p>
+          <div class="row">
+            <div class="col-sm-12>
+              <p>content</p>
+            </div>
+           </div>
         </div>
       </div>
     </div>
