--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="container-fluid">
         <div id="main-content">
           <div class="row">
-            <div class="col-sm-12>
+            <div class="col-sm-12">
               <p>content</p>
            </div>
          </div>
