--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div id="main">
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
-        <div class="sidebar-heading"><a href="/dnd" class="menu-title">DM Livewires RPG Emporium</a></div>
+        <div class="sidebar-heading"><a href="/dnd" class="menu-title"><img src="/dnd/master/img/logo.png" class="img-responsive"></a></div>
       </nav>
 
       <div class="container-fluid">
