--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <ul class="list-unstyled">
+    <ul id="side-bar-1" class="list-unstyled">
       <li><a href="/dnd/dmtools" class="list-group-item">DM Tools</a></li>
       <li><a data-toggle="collapse" href="#collapse1">DM Advice<span class="caret">&nbsp;</span></a>
         <div id="collapse1" class="panel-collapse collapse">
@@ -98,12 +98,14 @@ function openNav() {
   document.getElementById("mySidenav").style.width = "250px";
   document.getElementById("main").style.marginLeft = "250px";
   document.getElementById("main-content").style.marginLeft = "250px";
+  document.getElementById("side-bar-1").style.opacity = "100";
 }
 
 function closeNav() {
   document.getElementById("mySidenav").style.width = "0";
   document.getElementById("main").style.marginLeft= "0";
   document.getElementById("main-content").style.marginLeft= "0";
+  document.getElementById("side-bar-1").style.opacity = "0";
 }
 </script>
   </footer>
