--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+      <nav class="navbar navbar-expand-lg navbar-light bg-dark border-bottom">
         <div id="main">
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
         </div>
