--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="src/site.js"></script>
+  <script src="scr/site.js"></script>
 </body>
 <footer>
   
