--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
         <div id="main-content">
           <div class="row">
             <div class="col-sm-12">
-              <p>content</p>
+              <div class="section section-primary">
+                <p>Content</p>
+              </div>
            </div>
          </div>
       </div>
